--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="container">
         <h2>About Me</h2>
-        <p><b>Name:</b> Jaweria</p>
+        <p><b>Name:</b> Jaweria Faheem</p>
         <p><b>ID:</b> 15787</p>
         <p><b>Course:</b> Virtualisation and Cloud Computing</p>
         <p>
@@ -64,3 +64,4 @@
 
 </body>
 </html>
+
