--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
     <div class="container">
         <h2>About Me</h2>
-        <p><b>Name:</b> Jaweria</p>
-        <p><b>ID:</b> 15752</p>
-        <h1>Oye</h1>
+        <h3><b>Name:</b> Jaweria</h3>
+        <h3><b>ID:</b> 15752</h3>
+        
         <p><b>Course:</b> Virtualisation and Cloud Computing</p>
         <p>
             This is my first deployment using GitHub and Netlify. 
