--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #76b9fc;
+            background-color: #fdfdfd;
             margin: 0;
             padding: 0;
             text-align: center;
@@ -53,7 +53,7 @@
         <h2>About Me</h2>
         <p><b>Name:</b> Jaweria</p>
         <p><b>ID:</b> 15752</p>
-        <p>Check pipeline</p>
+        <p>Check pipeline....</p>
         <p><b>Course:</b> Virtualisation and Cloud Computing</p>
         <p>
             This is my first deployment using GitHub and Netlify. 
