--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <h2>About Me</h2>
         <p><b>Name:</b> Jaweria</p>
         <p><b>ID:</b> 15752</p>
+        <p>Checking...</p>
         <p><b>Course:</b> Virtualisation and Cloud Computing</p>
         <p>
             This is my first deployment using GitHub and Netlify. 
