--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     <p>This is a simple HTML project created for the course <b>Virtualisation and Cloud Computing</b>.</p>
 
     <div class="container">
-        <h2>About Me</h2>
-        <p><b>Name:</b> Jaweria</p>
-        <p><b>ID:</b> 15752</p>
-        <p>update</p>
-        <p>let try</p>
+        <h2>Group Member</h2>
+        <p><b>Name:</b> Jaweria <b>ID:</b> 15752</p>
+        <p><b>Name:</b> Muhammad Furqan Nasir <b>ID:</b> 15798</p>
         <p><b>Course:</b> Virtualisation and Cloud Computing</p>
         <p>
             This is my first deployment using GitHub and Netlify. 
             The purpose of this project is to demonstrate the use of a cloud service by creating an account, 
             uploading a file, making it public, and verifying deployment.
         </p>
-        <a href="https://github.com/jaweria15" target="_blank" class="btn">Visit GitHub</a>
+        <a href="https://github.com/jaweria15" target="_blank" class="btn">jaweria GitHub</a>
+        <a href="https://github.com/muhammadfurqannasir" target="_blank" class="btn">Furqan GitHub</a>
     </div>
+
 
 </body>
 </html>
