--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             The purpose of this project is to demonstrate the use of a cloud service by creating an account, 
             uploading a file, making it public, and verifying deployment.
         </p>
-        <a href="https://github.com/jaweria15" target="_blank" class="btn">jaweria GitHub</a>
-        <a href="https://github.com/muhammadfurqannasir" target="_blank" class="btn">Furqan GitHub</a>
+        <a href="https://github.com/jaweria15" target="_blank" class="btn">jaweria </a>
+        <a href="https://github.com/muhammadfurqannasir" target="_blank" class="btn">Furqan </a>
     </div>
 
-
+chalana kesy hai batao
 </body>
 </html>
