--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p><b>Name:</b> Muhammad Furqan Nasir <b>ID:</b> 15798</p>
         <p><b>Course:</b> Virtualisation and Cloud Computing</p>
         <p>
-            This is my first deployment using GitHub and Netlify. 
+            This is our first deployment using GitHub and Netlify. 
             The purpose of this project is to demonstrate the use of a cloud service by creating an account, 
             uploading a file, making it public, and verifying deployment.
         </p>
@@ -63,6 +63,6 @@
         <a href="https://github.com/muhammadfurqannasir" target="_blank" class="btn">Furqan </a>
     </div>
 
-chalana kesy hai batao
+
 </body>
 </html>
