--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
 
     <div class="container">
         <h2>About Me</h2>
-        <p><b>Name:</b> Jaweria</p>
-        <p><b>ID:</b> 15787</p>
-        <p>Check Pipelining....</p>
+        <p><b>Name:</b> Muhammad Furqan Nasir</p>
+        <p><b>ID:</b> 15798</p>
         <p><b>Course:</b> Virtualisation and Cloud Computing</p>
         <p>
             This is my first deployment using GitHub and Netlify. 
             The purpose of this project is to demonstrate the use of a cloud service by creating an account, 
             uploading a file, making it public, and verifying deployment.
         </p>
-        <a href="https://github.com/jaweria15" target="_blank" class="btn">Visit GitHub</a>
+        <a href="https://github.com/Muhammadfurqannasir" target="_blank" class="btn">Visit GitHub</a>
     </div>
 
 </body>
